@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (C) 2005, 2020 Wolfgang Schramm and Contributors
+ * Copyright (C) 2005, 2021 Wolfgang Schramm and Contributors
  *
  * This program is free software; you can redistribute it and/or modify it under
  * the terms of the GNU General Public License as published by the Free Software
@@ -72,7 +72,7 @@ public class GarminExternalDevice extends ExternalDevice {
    private boolean    _isCancelImport;
 
    public GarminExternalDevice() {
-      buildNewFileNames = false;
+      isBuildNewFileNames = false;
       VelocityService.init();
    }
 
@@ -174,10 +174,10 @@ public class GarminExternalDevice extends ExternalDevice {
                   max_latitude = Math.max(max_latitude, waypoint.getLatitude());
                }
             }
-            context.put("min_latitude", new Double(min_latitude)); //$NON-NLS-1$
-            context.put("min_longitude", new Double(min_longitude)); //$NON-NLS-1$
-            context.put("max_latitude", new Double(max_latitude)); //$NON-NLS-1$
-            context.put("max_longitude", new Double(max_longitude)); //$NON-NLS-1$
+            context.put("min_latitude", Double.valueOf(min_latitude)); //$NON-NLS-1$
+            context.put("min_longitude", Double.valueOf(min_longitude)); //$NON-NLS-1$
+            context.put("max_latitude", Double.valueOf(max_latitude)); //$NON-NLS-1$
+            context.put("max_longitude", Double.valueOf(max_longitude)); //$NON-NLS-1$
 
             Date starttime = null;
             Date endtime = null;
@@ -188,10 +188,13 @@ public class GarminExternalDevice extends ExternalDevice {
             short maximumheartrate = 0;
             double totaldistance = 0;
 
-            for (final Object name2 : tracks) {
-               final GPSTrack track = (GPSTrack) name2;
-               for (final Iterator<?> wpIter = track.getWaypoints().iterator(); wpIter.hasNext();) {
-                  final GPSTrackpoint wp = (GPSTrackpoint) wpIter.next();
+            for (final Object trackObject : tracks) {
+
+               final GPSTrack track = (GPSTrack) trackObject;
+
+               for (final Object wpObject : track.getWaypoints()) {
+
+                  final GPSTrackpoint wp = (GPSTrackpoint) wpObject;
 
                   // starttime, totaltime
                   if (wp.getDate() != null) {
@@ -319,7 +322,7 @@ public class GarminExternalDevice extends ExternalDevice {
             // handling of monitor.isCanceled()
             final Thread cancelObserver = new Thread(new Runnable() {
 
-//					@Override
+//               @Override
                @Override
                public void run() {
                   while (!monitor.isCanceled()) {
@@ -358,9 +361,9 @@ public class GarminExternalDevice extends ExternalDevice {
                final String monitorDevInfo;
                final String[] gpsInfo = garminDataProcessor.getGPSInfo();
                if (gpsInfo != null && gpsInfo.length > 0) {
-                  monitorDevInfo = Messages.Garmin_Transfer_msg + gpsInfo[0];
+                  monitorDevInfo = Messages.Garmin_Transfer_DataFrom + gpsInfo[0];
                } else {
-                  monitorDevInfo = Messages.Garmin_unknown_device;
+                  monitorDevInfo = Messages.Garmin_Transfer_UnknownDevice;
                }
 
                final GarminProduct productInfo = garminDataProcessor.getGarminProductInfo(2000L);
@@ -368,18 +371,18 @@ public class GarminExternalDevice extends ExternalDevice {
                garminDataProcessor.addProgressListener(new ProgressListener() {
                   private int done;
 
-//						@Override
+//                  @Override
                   @Override
                   public void actionEnd(final String action_id) {}
 
-//						@Override
+//                  @Override
                   @Override
                   public void actionProgress(final String action_id, final int current_value) {
                      monitor.worked(current_value - done);
                      done = current_value;
                   }
 
-//						@Override
+//                  @Override
                   @Override
                   public void actionStart(final String action_id, final int min_value, final int max_value) {
                      done = 0;
@@ -443,9 +446,9 @@ public class GarminExternalDevice extends ExternalDevice {
                      final ArrayList<GarminTrack> tList = new ArrayList<>();
                      tList.add(track);
                      context.put("tracks", tList); //$NON-NLS-1$
-                     context.put("printtracks", new Boolean(true)); //$NON-NLS-1$
-                     context.put("printwaypoints", new Boolean(false)); //$NON-NLS-1$
-                     context.put("printroutes", new Boolean(false)); //$NON-NLS-1$
+                     context.put("printtracks", Boolean.valueOf(true)); //$NON-NLS-1$
+                     context.put("printwaypoints", Boolean.valueOf(false)); //$NON-NLS-1$
+                     context.put("printroutes", Boolean.valueOf(false)); //$NON-NLS-1$
 
                      final File receivedFile = new File(RawDataManager.getTempDir()
                            + File.separator
@@ -473,26 +476,26 @@ public class GarminExternalDevice extends ExternalDevice {
                   // "Garmin device does not respond" -> org.dinopolis.gpstool.gpsinput.garmin.GPSGarminDataProcessor.open()
                   if (ex instanceof GPSException && ex.getMessage().equals("Garmin device does not respond!")) { //$NON-NLS-1$
                      runnable = new Runnable() {
-//								@Override
+//                        @Override
                         @Override
                         public void run() {
                            MessageDialog.openError(display.getActiveShell(),
-                                 Messages.Garmin_data_transfer_error,
-                                 Messages.Garmin_no_connection);
+                                 Messages.Garmin_Transfer_DataTransferError,
+                                 Messages.Garmin_Transfer_NoConnection);
                         }
                      };
                   } else {
                      runnable = new Runnable() {
-//								@Override
+//                        @Override
                         @Override
                         public void run() {
                            ex.printStackTrace();
                            ErrorDialog.openError(display.getActiveShell(),
-                                 Messages.Garmin_data_transfer_error,
-                                 Messages.Garmin_error_receiving_data,
+                                 Messages.Garmin_Transfer_DataTransferError,
+                                 Messages.Garmin_Transfer_ErrorReceivingData,
                                  new Status(Status.ERROR,
                                        Activator.PLUGIN_ID,
-                                       Messages.Garmin_commuication_error,
+                                       Messages.Garmin_Transfer_CommunicationError,
                                        ex));
                         }
                      };
